<resources>
    <string name="app_name">MusicStructureApp</string>
    <string name="image_desc">This is a purely decorative icon.</string>
    <string name="label">My Music</string>

    <!-- activity_main.xml TextViews -->
    <string name="category_chilled">Chilled Playlist</string>
    <string name="chilled_description">Here you will find all things chill from melodic dubstep to soulful R\u0026B! I find these are perfect for lounging around the house, studying to, or just playing in the background during social events.</string>
    <string name="category_hooping">Hooping Playlist</string>
    <string name="hooping_description">I personally prefer to hula hoop to these tracks as they range from rather upbeat to grimy drops perfect for paddles \u0026 breaks! What flow arts could you apply these to?</string>
    <string name="category_gym">Gym Playlist</string>
    <string name="gym_description">Whenever I am ready to go train at the gym I make sure to have at least a fair number of these queued up! They provide the best soundscapes for cardio and motivation!</string>
    <string name="category_favorites">Favorites Playlist</string>
    <string name="favorites_description">And last but certainly not least, here are just a few of my absolute favorite songs that I\'ve collected over the years&#8230; Enjoy!</string>

    <!-- Chilled Playlist -->
    <string name="chilled_label">Chilled Playlist</string>
    <string name="chilled_artist1">Ekali \u0026 Zhu</string>
    <string name="chilled_song1">Blame</string>
    <string name="chilled_artist2">6lack</string>
    <string name="chilled_song2">Free</string>
    <string name="chilled_artist3">Sonder</string>
    <string name="chilled_song3">Too Fast</string>
    <string name="chilled_artist4">Duke Dumont</string>
    <string name="chilled_song4">Ocean Drive</string>
    <string name="chilled_artist5">Billie Eilish \u0026 Khalid</string>
    <string name="chilled_song5">Lovely</string>
    <string name="chilled_artist6">Marshmello ft. Khalid</string>
    <string name="chilled_song6">Silence</string>
    <string name="chilled_artist7">Ookay</string>
    <string name="chilled_song7">Thief</string>
    <string name="chilled_artist8">Ghastly</string>
    <string name="chilled_song8">I\'ll Wait</string>
    <string name="chilled_artist9">Dpat</string>
    <string name="chilled_song9">Bloom</string>
    <string name="chilled_artist10">James Blake</string>
    <string name="chilled_song10">Retrograde</string>
    <string name="chilled_artist11">BoomBox Cartel ft. Nevve</string>
    <string name="chilled_song11">Whisper</string>
    <string name="chilled_artist12">Rezz</string>
    <string name="chilled_song12">Clear</string>
    <string name="chilled_artist13">Dabin</string>
    <string name="chilled_song13">Lillith</string>
    <string name="chilled_artist14">Feder ft. Lyse</string>
    <string name="chilled_song14">GOODBYE</string>
    <string name="chilled_artist15">Blackmill</string>
    <string name="chilled_song15">Gaia</string>
    <string name="chilled_artist16">Taska Black ft. Pauline Herr</string>
    <string name="chilled_song16">Nothing Lasts</string>
    <string name="chilled_artist17">Daniel Caesar ft. Kali Uchis</string>
    <string name="chilled_song17">Get You</string>
    <string name="chilled_artist18">Kaskade vs ZHU</string>
    <string name="chilled_song18">In the Morning</string>
    <string name="chilled_artist19">What So Not ft. George Maple — Ekali Mix</string>
    <string name="chilled_song19">Gemini</string>
    <string name="chilled_artist20">Elliot Moss</string>
    <string name="chilled_song20">Without the Lights</string>

    <!-- Hooping Playlist -->
    <string name="hooping_label">Hooping Playlist</string>
    <string name="hooping_artist1">San Holo (Taska Black Remix)</string>
    <string name="hooping_song1">Light</string>
    <string name="hooping_artist2">Rufus X What So Not X Flume (Ekali Remix)</string>
    <string name="hooping_song2">Neverbloom</string>
    <string name="hooping_artist3">Virtual Self</string>
    <string name="hooping_song3">Eon Break</string>
    <string name="hooping_artist4">Said the Sky ft. Kwesi</string>
    <string name="hooping_song4">All I Got</string>
    <string name="hooping_artist5">Jauz X Ghastly</string>
    <string name="hooping_song5">Ghosts N\' Sharks</string>
    <string name="hooping_artist6">Griz</string>
    <string name="hooping_song6">Griz Unreleased</string>
    <string name="hooping_artist7">kua X Pretty Lights X Bassnectar</string>
    <string name="hooping_song7">One Thing \u0026 Solar Sailor</string>
    <string name="hooping_artist8">Alison Wonderland (Vincent Remix)</string>
    <string name="hooping_song8">U don\'t know</string>
    <string name="hooping_artist9">Alina Baraz \u0026 Galimatias (Ekali Mix)</string>
    <string name="hooping_song9">Can I</string>
    <string name="hooping_artist10">BoomBox Cartel \u0026 QUIX ft. Anjulie</string>
    <string name="hooping_song10">Supernatural</string>
    <string name="hooping_artist11">Khalid \u0026 Normandi</string>
    <string name="hooping_song11">Love Lies</string>
    <string name="hooping_artist12">Marshmello X Ookay</string>
    <string name="hooping_song12">Chasing Colors</string>
    <string name="hooping_artist13">Sikdope</string>
    <string name="hooping_song13">Stardust</string>
    <string name="hooping_artist14">Neovaii</string>
    <string name="hooping_song14">Not You</string>
    <string name="hooping_artist15">Point Point (Khamsin Mix)</string>
    <string name="hooping_song15">Life in Grey</string>
    <string name="hooping_artist16">Bassnectar \u0026 G Jones</string>
    <string name="hooping_song16">The Mystery Spot</string>
    <string name="hooping_artist17">Lostboycrow (Kill Paris Remix)</string>
    <string name="hooping_song17">Powers</string>
    <string name="hooping_artist18">Above \u0026 Beyond (Seven Lions Mix)</string>
    <string name="hooping_song18">You Got To Go</string>
    <string name="hooping_artist19">Tory Lanez x Play Picasso x CoopChardonnay</string>
    <string name="hooping_song19">Proud Family</string>
    <string name="hooping_artist20">Aero Chord x Fractal (ft. Q\'AILA)</string>
    <string name="hooping_song20">Until the End</string>

    <!-- Gym Playlist -->
    <string name="gym_label">Gym Playlist</string>
    <string name="gym_artist1">Snails</string>
    <string name="gym_song1">Snailed it vol.3 [Enter Slugz City]</string>
    <string name="gym_artist2">Rufus X What So Not X Flume (Ekali Remix)</string>
    <string name="gym_song2">Neverbloom</string>
    <string name="gym_artist3">Urbanstep</string>
    <string name="gym_song3">Welcome to Wonderland</string>
    <string name="gym_artist4">Zomboy</string>
    <string name="gym_song4">Like a B****</string>
    <string name="gym_artist5">Flux Pavilion ft. Tom Cane (Cookie Monsta Remix)</string>
    <string name="gym_song5">Feels Good</string>
    <string name="gym_artist6">Excision \u0026 Dion Timmer</string>
    <string name="gym_song6">Africa</string>
    <string name="gym_artist7">Excision ft. Sam King</string>
    <string name="gym_song7">G Sh**</string>
    <string name="gym_artist8">Kodak To Graph</string>
    <string name="gym_song8">IAMANTHEM</string>
    <string name="gym_artist9">Zeds Dead X Megalodon</string>
    <string name="gym_song9">Wit Me Dub</string>
    <string name="gym_artist10">Dizzy Wright</string>
    <string name="gym_song10">Floyd Money Mayweather</string>
    <string name="gym_artist11">Lil Boosie (Brillz \u0026 Snails Bootleg)</string>
    <string name="gym_song11">Crazy</string>
    <string name="gym_artist12">Sikdope</string>
    <string name="gym_song12">Pieces</string>
    <string name="gym_artist13">BoomBox Cartel</string>
    <string name="gym_song13">Virus</string>
    <string name="gym_artist14">Diskord</string>
    <string name="gym_song14">Ur Luv</string>
    <string name="gym_artist15">Seven Lions ft. Xilent</string>
    <string name="gym_song15">The Fall</string>
    <string name="gym_artist16">G Jones</string>
    <string name="gym_song16">F*CK WHAT YOU HEARD</string>
    <string name="gym_artist17">RL Grime (Mura Masa Remix)</string>
    <string name="gym_song17">Kingpin</string>
    <string name="gym_artist18">Mura Masa (Vincent Remix)</string>
    <string name="gym_song18">Hell</string>
    <string name="gym_artist19">Getter \u0026 Adair ft. Georgia Ku</string>
    <string name="gym_song19">Blood</string>
    <string name="gym_artist20">NGHTMRE \u0026 SLANDER</string>
    <string name="gym_song20">GUD VIBRATIONS</string>

    <!-- Favorites Playlist -->
    <string name="favorites_label">Favorites Playlist</string>
    <string name="favorites_artist1">Tritonal ft. Cristina Soto (Seven Lions Mix)</string>
    <string name="favorites_song1">Still With Me</string>
    <string name="favorites_artist2">Paramore (Live in Philadelphia)</string>
    <string name="favorites_song2">I Caught Myself</string>
    <string name="favorites_artist3">G Jones \u0026 Bleep Bloop</string>
    <string name="favorites_song3">A$∆¶ M\'§</string>
    <string name="favorites_artist4">Plantrae</string>
    <string name="favorites_song4">Enter the Seed</string>
    <string name="favorites_artist5">Minnesota</string>
    <string name="favorites_song5">Stardust Redux</string>
    <string name="favorites_artist6">Zhu</string>
    <string name="favorites_song6">Secret Weapon</string>
    <string name="favorites_artist7">Alina Baraz ft. Khalid</string>
    <string name="favorites_song7">Electric</string>
    <string name="favorites_artist8">Tash Sultana (Live Bedroom Recording)</string>
    <string name="favorites_song8">Gemini</string>
    <string name="favorites_artist9">Aurora</string>
    <string name="favorites_song9">Queendom</string>
    <string name="favorites_artist10">Neo Noir ft. Brooke Williams</string>
    <string name="favorites_song10">When I Was Young</string>
    <string name="favorites_artist11">Blackmill</string>
    <string name="favorites_song11">Spirit of Life</string>
    <string name="favorites_artist12">Pendulum</string>
    <string name="favorites_song12">Watercolour</string>
    <string name="favorites_artist13">Snavs \u0026 ReauBeau</string>
    <string name="favorites_song13">Dreams</string>
    <string name="favorites_artist14">Crywolf</string>
    <string name="favorites_song14">Wake [E-bow]</string>
    <string name="favorites_artist15">Seven Lions</string>
    <string name="favorites_song15">Isis (Deep Mix)</string>
    <string name="favorites_artist16">Quixotic \u0026 The Human Experience</string>
    <string name="favorites_song16">From the Outside Looking In</string>
    <string name="favorites_artist17">The Weeknd</string>
    <string name="favorites_song17">Outside</string>
    <string name="favorites_artist18">Brothel</string>
    <string name="favorites_song18">Q</string>
    <string name="favorites_artist19">alt-J</string>
    <string name="favorites_song19">Hunger of the Pine</string>
    <string name="favorites_artist20">Porter Robinson (Big Sandz Remix)</string>
    <string name="favorites_song20">Fellow Feeling</string>
</resources>
